# bonsai

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  README.md  build_test.sh  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.e2e_test.yml  docker-compose.env  docker-compose.yml  docker.env  package-lock.json  package.json  raw_mtuberculosis_test_ska_seq.fasta  raw_saureus_test_ska_seq.fasta  requirements-dev.txt  requirements.dev.txt  requirements.tooling.txt  tsconfig.json  webpack.config.cjs
allele_cluster_service/: Dockerfile  pyproject.toml  setup.cfg
allele_cluster_service/allele_cluster_service/: worker.py
allele_cluster_service/tests/: test_ms_tree_cluster.py
api/: Dockerfile  pyproject.toml  requirements-dev.txt  setup.cfg
api/bonsai_api/: __version__.py  auth.py  cli.py  config.py  config.toml  dependencies.py  email.py  exceptions.py  io.py  main.py  migrate.py  notify.py  parse.py  thresholds.toml  utils.py
api/bonsai_api/analysis_parsers/: __init__.py  registry.py
api/bonsai_api/cli/: __init__.py  cli.py  cli_tasks.py  utils.py
api/bonsai_api/crud/: analysis.py  cluster.py  curation.py  errors.py  favorites.py  genomic_asset.py  genomic_resource.py  group.py  location.py  memberships.py  metadata.py  reference_genomes.py  sample.py  summary.py  tags.py  user.py  utils.py
api/bonsai_api/db/: __init__.py  db.py  index.py  utils.py  verify.py
api/bonsai_api/extensions/: ldap_extension.py
api/bonsai_api/internal/: error_handlers.py  problem_types.py
api/bonsai_api/lims_export/: __init__.py  config.py  export.py  formatters.py  models.py
api/bonsai_api/models/: analysis.py  base.py  context.py  enums.py  genome_asset.py  genomic_resource.py  group.py  igv.py  location.py  memberships.py  metadata.py  pipeline.py  qc.py  reference_genome.py  sample.py  sample_v2.py  summary_manifest.py  tags.py  user.py
api/bonsai_api/old_models/: group.py  metadata.py  sample.py  user.py
api/bonsai_api/parsers/: registry.py
api/bonsai_api/redis/: __init__.py  minhash.py  models.py  queue.py  ska.py  utils.py
api/bonsai_api/resources/: default_lims_export.yml
api/bonsai_api/routers/: __init__.py  analysis.py  auth.py  cluster.py  export.py  files.py  genome_assets.py  genomic_assets.py  groups.py  jobs.py  locations.py  memberships.py  pipeline_run.py  reference_genomes.py  references.py  resources.py  root.py  samples.py  shared.py  tags.py  users.py
api/bonsai_api/services/: analysis_service.py  curation_service.py  files_service.py  genome_asset_service.py  genomic_asset_service.py  genomic_resource_service.py  group_service.py  membership_service.py  reference_genomes.py  sample_service.py  user_service.py  utils.py
api/tests/: conftest.py  test_cli.py  test_io.py  test_lims_export.py
api/tests/cli/: test_cli.py  test_cli_tasks.py
api/tests/crud/: test_tags.py
api/tests/data/: test_ecoli_1.json  test_mtuberculosis_1.json
api/tests/lims_export/: test_export.py  test_formatters.py
api/tests/routers/: test_shared.py
audit_log_service/: Dockerfile  README.md  pyproject.toml
audit_log_service/audit_log/core/: config.py  logging.py
audit_log_service/audit_log_service/: api.py  app.py  audit_repository.py  db.py  models.py
audit_log_service/audit_log_service/core/: config.py  logging.py
audit_log_service/tests/: conftest.py  test_api.py
base-image/: Dockerfile  README.md  pyproject.toml
base-image/bonsai_models/: __init__.py  __version__.py  antibiotics.py  base.py  constants.py  group.py  metadata.py  migrate.py  phenotype.py  sample.py  util.py
base-image/bonsai_models/db/: __init__.py  group.py  location.py  sample.py  user.py
base-image/bonsai_models/migrate/: schema_migration.py  v1_to_v2.py
base-image/bonsai_models/models/: antibiotics.py  base.py  cluster.py  constants.py  group.py  location.py  phenotype.py  qc.py  sample.py  tags.py  typing.py  user.py
base-image/bonsai_models/schema/: __init__.py  antibiotics.py  group.py  location.py  metadata.py  qc.py  sample.py  user.py
base-image/bonsai_models/utils/: timestamp.py
base-image/bonsai_modules/: metadata.py  qc.py  sample.py  species.py  tags.py  typing.py
frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  setup.cfg  tsconfig.json  webpack.config.cjs
frontend/bonsai_app/: __version__.py  app.py  bonsai.py  config.py  custom_filters.py  models.py
frontend/bonsai_app/templates/: bootstrap_base.html  navbar.html
frontend/tests/: conftest.py  test_custom_filters.py  test_landingpage.py
frontend/web/js/: api.ts  basket.ts  bonsai.ts  constants.ts  notification.ts  sample-actions.ts  sample.ts  similar.ts  table.ts  types.ts  user.ts  util.ts
libs/api_client/: pyproject.toml
minhash_service/: Dockerfile  pyproject.toml  setup.cfg
minhash_service/minhash_service/: __init__.py  audit.py  cli.py  config.py  db.py  exceptions.py  factories.py  store.py  tasks.py  utils.py  version.py  worker.py
minhash_service/minhash_service/analysis/: __init__.py  cluster.py  io.py  models.py  similarity.py
minhash_service/minhash_service/cli/: main.py  utils.py
minhash_service/minhash_service/core/: __init__.py  config.py  exceptions.py  factories.py  models.py
minhash_service/minhash_service/infrastructure/: __init__.py  signature_repository.py  signature_storage.py
minhash_service/minhash_service/integrity/: __init__.py  checker.py  report_model.py  report_repository.py
minhash_service/tests/: conftest.py  test_io.py  test_utils.py  utils.py
minhash_service/tests/data/: DRR237260.sig  (+5 more)
notification_service/: Dockerfile  pyproject.toml
notification_service/bonsai_notification/: api.py  config.py  models.py  tasks.py  utils.py
notification_service/notification_service/: api.py  cli.py  config.py  dispatcher.py  main.py  models.py  sender.py  tasks.py  utils.py
notification_service/tests/: test_api.py  test_config.py  test_models.py  test_sender.py  test_utils.py
ska_service/: Dockerfile  pyproject.toml  setup.cfg  test.ini
ska_service/ska_service/: __init__.py  tasks.py  worker.py
(+502 files in other folders)
