[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bonsai_api"
dynamic = ["version"]
authors = [
  { name = "Markus Johansson", email = "markus.h.johansson@skane.se" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3", 
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Framework :: FastAPI",
]
dependencies = [
  "redis",
  "uvicorn[standard]==0.25.0",
  "click==8.1.7",
  "fastapi[all]==0.115.0",
  "python-jose[cryptography]==3.3.0",
  "passlib==1.7.4",
  "bcrypt==4.1.1",
  "ldap3==2.9.1",
  "pandas==2.1.3",
  "redis",
  "rq==2.5.0",
  "pymongo==4.15.4",
  "bonsai-prp==1.5.0"
]

[project.optional-dependencies]
test = [
  "httpx",
  "pytest-asyncio",
  "mongomock",
  "mongomock-motor"
]

[project.scripts]
bonsai-api = "bonsai_api.cli:cli"

[tool.setuptools.dynamic]
version = { attr = "bonsai_api.__version__" }

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.package-data]
"bonsai_api" = ["*.toml", "resources/*"]

[mypy]
plugins = "pydantic.mypy"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.pytest_env]
API_AUTHENTICATION = false