[metadata]
name = bonsai_api
version = attr: bonsai_api.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
description = Bonsai REST api
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
console_scripts = bonsai_api = bonsai_api.cli:cli

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.10
install_requires =
    setuptools
    wheel
    uvicorn[standard]==0.25.0
    click==8.1.7
    fastapi[all]==0.115.0
    python-jose[cryptography]==3.3.0
    passlib==1.7.4
    bcrypt==4.1.1
    ldap3==2.9.1
    pandas==2.1.3
    redis
    rq==2.5.0
    motor==3.7.1
    pymongo==4.14.1
    bonsai-prp==1.3.3
    
[options.package_data]
bonsai_api = *.toml

[options.extras_require]
test = 
    httpx
    pytest-asyncio
    mongomock
    mongomock-motor

[tool:pytest]
asyncio_mode=auto
