[metadata]
name = minhash_service
version = attr: minhash_service.__version__
author = Markus Johansson
author_email = markus.h.johansson@skane.se
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options.entry_points]
    console_scripts = minhash-service = minhash_service.cli:main

[options]
packages = find:
zip_safe = True
include_package_data = False
python_requires = >=3.11
install_requires =
    setuptools
    wheel
    redis
    pydantic-settings
    click==8.1.7
    rq==2.5.0
    sourmash==4.8.14
    fasteners==0.19
    pymongo==4.14.1

[options.extras_require]
dev = 
    black
    isort
    pytest
    mypy
