[project]
name = "notification_service"
dynamic = ["version"]
description = "A service that sends email notifications."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Markus Johansson", email = "markus.h.johansson@skane.se" }
]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "redis",
    "pydantic-settings",
    "fastapi[all]==0.115.0",
    "click==8.1.7",
    "rq==2.5.0",
    "jinja2",            # For templating
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "mypy"
]

[project.scripts]
notification-service = "bonsai_notification.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bonsai_notification"]

[tool.setuptools.package-data]
bonsai_notification = [
    "templates/*.html"
]

[tool.setuptools.dynamic]
version = {attr = "bonsai_notification.version.__version__"}
