[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ska_service"
dynamic = ["version"]
authors = [
  { name = "Markus Johansson", email = "markus.h.johansson@skane.se" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Framework :: RQ",
]
dependencies = [
  "redis",
  "rq==2.5.0",
  "pydantic==2.9.0",
  "pydantic-settings==2.6.1",
  "pandas==2.1.3",
  "scipy==1.14.1",
  "biopython==1.83",
]

[project.scripts]
ska_service = "ska_service.worker:create_app"

[project.optional-dependencies]
test = [ ]

[tool.setuptools.dynamic]
version = { attr = "ska_service.__version__" }

[tool.setuptools]
include-package-data = false
zip-safe = true
